fix svg icon spacing

--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -1,4 +1,6 @@
 .icon {
+    display: block;
+
     &__logo {
         fill: #000;
         @include scale-icons(60px, 40px);
@@ -27,6 +29,7 @@
 
     &__facebook,
     &__twitter {
+        display: inline;
         fill: #fff;
         @include scale-icons(30px, 30px);
     }
